feat: theme presets (tweakcn) + admin trend graph [gen by codex] (#4)
* refactor(v2): TS/Next.js conventions, shared types/constants/helpers [gen by codex] (#3)

* refactor(v2): standardize TS/Next.js conventions with shared types, constants, and helpers [gen by codex]

* docs(prompt): add automation flow and rules [gen by codex]

* test: add vitest setup and unit tests for helpers; ci: add GitHub Actions; docs: add English README and link from Korean [gen by codex]

* feat(theme): add global theme presets via tweakcn helper and settings UI; feat(admin): add patients trend line graph; test: add unit tests for theme, analytics and chart path [gen by codex]

* docs(flow): update PR flow to merge features into v2 first; add dev prefill flags and tests; extend theme presets [gen by codex]

--- a/.env.example
+++ b/.env.example
@@ -12,9 +12,13 @@ USE_REDIS=false
 # PostgreSQL (used for history/master data/accounts)
 DATABASE_URL=postgresql://app:app@db:5432/allright
 USE_DB=false
+
 POSTGRES_USER=app
 POSTGRES_PASSWORD=app
 POSTGRES_DB=allright
 
 # Auth
 JWT_SECRET=please-change-me
+
+# Dev integration test helpers
+NEXT_PUBLIC_DEV_PREFILL=false
