--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [main]
   push:
-    branches: [ v2 ]
+    branches: [v2]
 
 jobs:
   build-and-test:
@@ -22,7 +22,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: 'pnpm'
+          registry-url: https://registry.npmjs.org
+          cache: "pnpm"
 
       - name: Enable corepack
         run: corepack enable
