feat(theme): wire TweakCN presets list; settings UI for all presets; chore: add scripts/add-themes.sh and npm run add:themes; test: ensure presets list contains required names [gen by codex]

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "format": "prettier --write .",
     "add-component": "pnpx shadcn@latest add",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "add:themes": "bash ./scripts/add-themes.sh"
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.7",
